--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /CSharpCodingInterviewQuestions/.vs/CSharpCodingInterviewQuestions/FileContentIndex/8ebb157c-9c5a-4c6e-84aa-1397cd038106.vsidx
 /CSharpCodingInterviewQuestions/.vs/CSharpCodingInterviewQuestions/FileContentIndex/ae2c5d34-0f86-47b1-adf5-828d6b09bcc4.vsidx
 /.gitignore
+/CSharpCodingInterviewQuestions/.vs/CSharpCodingInterviewQuestions/v17/.suo
